fix border collapse

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -337,6 +337,7 @@ a {
 		margin: 2em 0;
 		background-color: transparent;
 		border: 1px solid $color-gray-90;
+		border-collapse: collapse;
 	}
 
 	table th,
